--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -19,8 +19,8 @@
         <h1>PM2.5 Prediction Application</h1>
         <nav>
             <ul>
-                <li><a href="{{ url_for('index') }}">Home</a></li>
-                <li><a href="{{ url_for('prediction') }}">Predictions</a></li>
+                <!-- <li><a href="{{ url_for('index') }}">Home</a></li>
+                <li><a href="{{ url_for('prediction') }}">Predictions</a></li> -->
             </ul>
         </nav>
     </header>
