--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,6 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
+<style>
+    .container {
+        display: flex;
+        justify-content: space-between;
+    }
+    .sidebar {
+        order: 2;
+        width: 200px;
+    }
+    .map-container, .pm25-values {
+        order: 1;
+        flex-grow: 1;
+    }
+</style>
 <div class="container">
     <h1>PM2.5 Prediction Dashboard</h1>
     <div class="sidebar">
