--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -71,7 +71,7 @@
 </style>
 
 <div class="navbar">
-    <h1>PM2.5 Prediction Dashboard</h1>
+    <h1>SmogSense</h1>
     <div>
         <a href="{{ url_for('index') }}">Home</a>
         <a href="{{ url_for('prediction', sensor_id=sensor_id) }}">View Predictions</a>
