--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,6 +16,10 @@
         justify-content: space-between;
         align-items: center;
     }
+    .navbar h1 {
+        color: #D3C4A3; /* Light Almond */
+        margin: 0;
+    }
     .navbar a {
         color: #D3C4A3; /* Light Almond */
         text-decoration: none;
@@ -50,9 +54,7 @@
         padding: 20px;
         margin-right: 20px;
         border-radius: 8px;
-    }
-    h1, h2 {
-        color: #333333; /* Deep Charcoal */
+    
     }
     a {
         color: #D3C4A3; /* Light Almond */
