--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -15,6 +15,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        border-bottom: 2px solid #D3C4A3; /* เพิ่มเส้นขอบด้านล่าง */
     }
     .navbar h1 {
         color: #D3C4A3; /* Light Almond */
@@ -31,9 +32,10 @@
     .container {
         display: flex;
         justify-content: space-between;
-        background-color: #D3C4A3; /* Light Almond */
+        background-color: #333333; /* Deep Charcoal */
         color: #333333; /* Deep Charcoal */
         padding: 0 20px 20px 20px; /* ปรับ padding เพื่อให้ติดกับ navbar */
+        height: calc(100vh - 60px); /* ปรับความสูงของ container */
     }
     .sidebar {
         order: 2;
@@ -46,14 +48,15 @@
         flex-direction: column;
         align-items: center; /* จัดตำแหน่งให้อยู่ตรงกลาง */
     }
-    .map-container, .pm25-values {
+    .map-container {
         order: 1;
         flex-grow: 1;
-        background-color: #D3C4A3; /* Light Almond */
+        background-color: #333333; /* Deep Charcoal */
         color: #333333; /* Deep Charcoal */
-        padding: 20px;
-        margin-right: 20px;
-        border-radius: 8px;
+        padding: 0; /* ลบ padding เพื่อให้แผนที่เต็มพื้นที่ */
+        margin-right: 0; /* ลบ margin-right เพื่อให้แผนที่เต็มพื้นที่ */
+        border-radius: 0; /* ลบ border-radius เพื่อให้แผนที่เต็มพื้นที่ */
+        height: 100%; /* ปรับความสูงของ map-container */
     
     }
     a {
@@ -82,7 +85,7 @@
 
 <div class="container">
     <div class="map-container">
-        <div id="map"></div>
+        <div id="map" style="width: 100%; height: 100%;"></div>
     </div>
     <div class="sidebar">
         <h2>My Location</h2>
