--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -57,7 +57,10 @@
         margin-right: 0; /* ลบ margin-right เพื่อให้แผนที่เต็มพื้นที่ */
         border-radius: 0; /* ลบ border-radius เพื่อให้แผนที่เต็มพื้นที่ */
         height: 100%; /* ปรับความสูงของ map-container */
-    
+        margin-top: 20px; /* เพิ่ม margin-top เพื่อให้มีระยะห่างจาก navbar */
+    }
+    h1, h2 {
+        color: #D3C4A3; /* Deep Charcoal */
     }
     a {
         color: #D3C4A3; /* Light Almond */
