--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -48,6 +48,30 @@
             .navbar a:hover {
                 text-decoration: underline;
             }
+            .navbar .dropdown {
+                position: relative;
+                display: inline-block;
+            }
+            .navbar .dropdown-content {
+                display: none;
+                position: absolute;
+                background-color: #333333;
+                min-width: 160px;
+                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+                z-index: 1;
+            }
+            .navbar .dropdown-content a {
+                color: #D3C4A3;
+                padding: 12px 16px;
+                text-decoration: none;
+                display: block;
+            }
+            .navbar .dropdown-content a:hover {
+                background-color: #575757;
+            }
+            .navbar .dropdown:hover .dropdown-content {
+                display: block;
+            }
             .container {
                 display: flex;
                 justify-content: space-between;
@@ -114,6 +138,17 @@
             <div>
                 <a href="{{ url_for('index') }}">Home</a>
                 <a href="{{ url_for('prediction', sensor_id=sensor_id) }}">View Predictions</a>
+                <div class="dropdown">
+                    <a href="#">Select Region</a>
+                    <div class="dropdown-content">
+                        <a href="#" onclick="changeRegion('north')">North</a>
+                        <a href="#" onclick="changeRegion('northeast')">Northeast</a>
+                        <a href="#" onclick="changeRegion('central')">Central</a>
+                        <a href="#" onclick="changeRegion('east')">East</a>
+                        <a href="#" onclick="changeRegion('west')">West</a>
+                        <a href="#" onclick="changeRegion('south')">South</a>
+                    </div>
+                </div>
             </div>
         </div>
         
