--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -131,13 +131,47 @@
             li {
                 margin-bottom: 10px;
             }
+            /* Modal styles */
+            .modal {
+                display: none; /* Hidden by default */
+                position: fixed; /* Stay in place */
+                z-index: 1000; /* Sit on top */
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                overflow: auto; /* Enable scroll if needed */
+                background-color: rgb(0,0,0); /* Fallback color */
+                background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+                padding-top: 60px;
+            }
+            .modal-content {
+                background-color: #fefefe;
+                margin: 5% auto; /* 15% from the top and centered */
+                padding: 20px;
+                border: 1px solid #888;
+                width: 80%; /* Could be more or less, depending on screen size */
+                border-radius: 10px;
+            }
+            .close {
+                color: #aaa;
+                float: right;
+                font-size: 28px;
+                font-weight: bold;
+            }
+            .close:hover,
+            .close:focus {
+                color: black;
+                text-decoration: none;
+                cursor: pointer;
+            }
         </style>
         
         <div class="navbar">
             <h1>SmogSense</h1>
             <div>
                 <a href="{{ url_for('index') }}">Home</a>
-                <a href="{{ url_for('prediction', sensor_id=sensor_id) }}">View Predictions</a>
+                <a href="#" id="view-predictions">View Predictions</a>
                 <div class="dropdown">
                     <a href="#">Select Region</a>
                     <div class="dropdown-content">
@@ -158,6 +192,22 @@
             </div>
             {% block content %}
             {% endblock %}
+        </div>
+
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <div class="info-box">
+                    <h2>My Location</h2>
+                    <p>My Location: <span id="modal-location-name">None</span></p>
+                    <p>Temperature: <span id="modal-temperature">N/A</span></p>
+                </div>
+                <div class="info-box">
+                    <h2>PM2.5 Prediction</h2>
+                    <iframe src="/dash/" width="100%" height="400px" style="border:none;"></iframe>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
