--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -119,7 +119,7 @@
                 font-weight: 700;
             }
             h2 {
-                color: #333333; /* Deep Charcoal */
+                color: #D3C4A3; /* Deep Charcoal */
                 font-weight: 700;
             }
             a {
