--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -119,7 +119,7 @@
                 font-weight: 700;
             }
             h2 {
-                color: #D3C4A3; /* Deep Charcoal */
+                color: #333333; /* Deep Charcoal */
                 font-weight: 700;
             }
             a {
@@ -147,12 +147,12 @@
                 width: 100%;
                 height: 100%;
                 overflow: auto; /* Enable scroll if needed */
-                background-color: rgb(0,0,0); /* Fallback color */
-                background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+                background-color: rgba(0,0,0,0.8); /* Black w/ opacity */
                 padding-top: 60px;
             }
             .modal-content {
-                background-color: #fefefe;
+                background-color: #333333; /* Deep Charcoal */
+                color: #D3C4A3; /* Light Almond */
                 margin: 5% auto; /* 15% from the top and centered */
                 padding: 20px;
                 border: 1px solid #888;
@@ -160,16 +160,32 @@
                 border-radius: 10px;
             }
             .close {
-                color: #aaa;
+                color: #D3C4A3;
                 float: right;
                 font-size: 28px;
                 font-weight: bold;
             }
             .close:hover,
             .close:focus {
-                color: black;
+                color: #ffffff;
                 text-decoration: none;
                 cursor: pointer;
+            }
+            .grid-container {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr); /* 2 คอลัมน์ */
+                gap: 10px;
+            }
+            .info-box {
+                background: #D3C4A3; /* Light Almond */
+                padding: 15px;
+                border-radius: 10px;
+                text-align: center;
+                box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+            }
+            .value {
+                font-size: 20px;
+                font-weight: bold;
             }
         </style>
         
