--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -245,7 +245,7 @@ h1 {
 }
 
 h2 {
-    color: #333333;
+    color: #D3C4A3;
     /* Deep Charcoal */
 }
 
@@ -639,7 +639,7 @@ h1 {
     font-weight: 700;
 }
 h2 {
-    color: #333333; /* Deep Charcoal */
+    color: #D3C4A3; /* Deep Charcoal */
     font-weight: 700;
 }
 a {
