--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -33,10 +33,10 @@ header {
 
 
 h1 {
-    color: #D3C4A3; /* Light Almond */
+    color: #accaf1; /* Light Almond */
 }
 h2 {
-    color: #D3C4A3; /* Light Almond */
+    color: #accaf1; /* Light Almond */
 }
 
 
@@ -65,7 +65,7 @@ h2 {
 .sidebar {
     width: 45%;
     background-color: #333333;
-    color: #D3C4A3;
+    color: #accaf1;
     padding: 20px;
     margin-top: 20px;
     display: flex;
@@ -78,7 +78,7 @@ h2 {
 
 .sidebar h2 {
     margin-top: 0;
-    color: #D3C4A3;
+    color: #accaf1;
     font-weight: 700;
 }
 
@@ -92,7 +92,7 @@ h2 {
 }
 
 .sidebar a {
-    color: #D3C4A3;
+    color: #accaf1;
     text-decoration: none;
     display: block;
     padding: 10px;
@@ -132,22 +132,22 @@ footer {
 /* Navbar */
 .navbar {
     background-color: #333333;
-    color: #D3C4A3;
+    color: #accaf1;
     padding: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 2px solid #D3C4A3;
+    border-bottom: 2px solid #accaf1;
 }
 
 .navbar h1 {
-    color: #D3C4A3;
+    color: #accaf1;
     margin: 0;
     font-weight: 700;
 }
 
 .navbar a {
-    color: #D3C4A3;
+    color: #accaf1;
     text-decoration: none;
     padding: 10px;
     font-weight: 400;
@@ -172,7 +172,7 @@ footer {
 }
 
 .navbar .dropdown-content a {
-    color: #D3C4A3;
+    color: #accaf1;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -188,7 +188,7 @@ footer {
 
 /* Info Box */
 .info-box {
-    background-color: #D3C4A3;
+    background-color: #accaf1;
     color: #333333;
     padding: 20px;
     border-radius: 8px;
@@ -421,7 +421,7 @@ footer {
 }
 
 
-/* ปรับพื้นที่ PM2.5 Air Quality Index และตาราง */
+/* สไตล์สำหรับ PM2.5 Air Quality Index */
 .air-quality-index {
     margin-top: 20px;
     padding: 15px;
@@ -451,11 +451,11 @@ footer {
     margin-bottom: 0;
 }
 
-/* ปรับพื้นที่ตารางให้อยู่ในพื้นที่เดียวกัน */
+/* สไตล์สำหรับตาราง 7-Day PM2.5 Forecast Table */
 .forecast-table {
     margin-top: 20px;
     padding: 15px;
-    background-color: #ffffff; /* พื้นหลังสีขาวเหมือนกัน */
+    background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
